--- a/src/components/Section/Section.module.css
+++ b/src/components/Section/Section.module.css
@@ -1,5 +1,9 @@
 .title {
   font-size: 40px;
   text-align: center;
-  color: rgb(41, 126, 129);
+  color: #333;
+  font-weight: bold;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  letter-spacing: -1px; 
 }
