--- a/src/components/Statistics/Statistics.module.css
+++ b/src/components/Statistics/Statistics.module.css
@@ -1,28 +1,18 @@
 .list {
-  background-color: #f5f5f5;
+  background-color: rgb(201, 245, 235);
   margin: 0;
   padding: 20px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .item {
-  margin-bottom: 10px;
+  margin-bottom: 5px;
   font-size: 16px;
-  color: #333;
-  padding: 8px 16px;
-  background-color: #e9ecef;
-  border-radius: 4px;
 }
 
 .item:last-child {
   margin-bottom: 0px;
-}
-
-.item:hover {
-  background-color: #dee2e6;
 }
