--- a/src/components/Notification/Notification.module.css
+++ b/src/components/Notification/Notification.module.css
@@ -1,5 +1,5 @@
 .title {
-  font-size: 16 px;
-  color: rgb(206, 138, 161);
+  font-size: 40px;
   text-align: center;
+  color: #333; /* Ciemnoszary kolor tekstu */
 }
