--- a/src/components/Statistics/Statistics.module.css
+++ b/src/components/Statistics/Statistics.module.css
@@ -1,5 +1,5 @@
 .list {
-  background-color: rgb(201, 245, 235);
+  background-color: #f5f5f5;
   margin: 0;
   padding: 20px;
   display: flex;
@@ -11,6 +11,7 @@
 .item {
   margin-bottom: 5px;
   font-size: 16px;
+  color: #333;
 }
 
 .item:last-child {
